completed current weather card except the city name and date

--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@ h1 {
     background-color: blue;
     color: white;
 }
+
+.card {
+    background-color: blue;
+    color: white;
+}
+
+.currentDisplay {
+    background-color: white;
+    color: black;
+}
+
+.fiveDayCards {
+    display: flex;
+}
