--- a/style.css
+++ b/style.css
@@ -12,8 +12,25 @@ h1 {
 .currentDisplay {
     background-color: white;
     color: black;
+    width: 100%;
 }
 
 .fiveDayCards {
-    display: flex;
+    justify-content: space-evenly;
 }
+
+ul {
+    list-style: none;
+    margin-top: 4;
+}
+
+.historyBtn {
+    background-color: grey;
+    color: black;
+    text-align: center;
+}
+
+#searchColumn {
+    width: 100%;
+}
+
